--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/LarvenLLC/todo-issues/issues"
   },
-  "homepage": "https://github.com/LarvenLLC/todo-issues#readme"
+  "homepage": "https://github.com/LarvenLLC/todo-issues#readme",
+  "dependencies": {
+    "@actions/core": "^1.2.7",
+    "@actions/github": "^4.0.0"
+  }
 }
