--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,17 @@
-ame: "TODO-Issues"
-description: "Create issues from TODO.md"
+ame: 'TODO-Issues'
+description: 'Create issues from TODO.md'
 inputs:
   repo-token: # github token
-    description: "Github repo token"
+    description: 'Github repo token'
     required: true
   path: # path of todo
-    description: "Path to TODO file"
+    description: 'Path to TODO file'
     required: true
-    default: "./TODO.md"
+    default: './TODO.md'
 outputs:
   issues: # number of issues created
-    description: "The number of issues created"
+    description: 'The number of issues created'
 
 runs:
-  using: "node12"
-  main: "index.js"
+  using: 'node12'
+  main: 'index.js'
