--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-issues",
   "version": "1.0.5",
-  "description": "",
+  "description": "Create issues from TODO.md",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/LarvenLLC/todo-issues.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["todo", "issues", "github"],
+  "author": "Adam Beleko",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/LarvenLLC/todo-issues/issues"
