--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: LarvenLLC/todo-issues@v1.6
         with:
           repo-token: ${{ secrets.GH_TOKEN }}
-          path: "./todo"
+          path: "./TODO"
       # Use the output from the `issue` step
       - name: Get the number of issues created
         run: echo "Created ${{ steps.issue.outputs.issues }} issue(s)"
