--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Get todos action step
         id: issue
-        uses: todo-issues@v1
+        uses: LarvenLLC/todo-issues@v1
         with:
           repo-token: ${{ secrets.GH_TOKEN }}
           path: "./TODO"
